--- a/crates/z1-hash/Cargo.toml
+++ b/crates/z1-hash/Cargo.toml
@@ -7,6 +7,8 @@ rust-version.workspace = true
 publish = false
 
 [dependencies]
-anyhow.workspace = true
-serde.workspace = true
-thiserror.workspace = true
+blake3.workspace = true
+z1-ast = { path = "../z1-ast" }
+
+[dev-dependencies]
+z1-parse = { path = "../z1-parse" }
