--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,7 @@ toml = "0.8"
 logos = "0.13"
 rowan = "0.15"
 camino = "1.1"
-blake3 = "1.5"
+sha3 = "0.10"
 ed25519-dalek = { version = "2.1", features = ["rand_core"] }
 rand = "0.8"
 clap = { version = "4.5", features = ["derive"] }
