feat(ctx): implement context estimator for M1 milestone
## Core Implementation
- New z1-ctx crate with naive token counting (chars / 3.8)
- Budget validation against module ctx=N declarations
- Per-function token estimates
- Actionable error messages with split suggestions

## CLI Integration
- Added `z1-cli ctx` subcommand
- Flags: --verbose, --chars-per-token, --no-enforce
- Tests with http_server.z1c: 72/128 tokens (56.2% used)

## Test Coverage
- 14 unit + integration tests (all passing)
- Real fixture validation
- Error message generation
- Custom configuration

## Documentation
- README.md with usage guide
- IMPLEMENTATION.md with technical details
- SDict hooks documented as future work

## Files Added
- crates/z1-ctx/ (new crate)
- fixtures/ctx/over_budget.z1c (test fixture)

## Files Modified
- Cargo.toml (added z1-ctx to workspace)
- crates/z1-cli/ (ctx subcommand integration)
- plan.md (marked M1 task 3 complete)

All quality checks pass:
✓ cargo test -p z1-ctx (14/14 tests)
✓ cargo clippy (zero warnings)
✓ cargo fmt

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
   "crates/z1-lex",
   "crates/z1-parse",
   "crates/z1-fmt",
+  "crates/z1-ctx",
   "crates/z1-typeck",
   "crates/z1-effects",
   "crates/z1-hash",
