fix(parse): normalize identifiers to canonical form, fix semantic hash invariance
CRITICAL FIX: Parser now normalizes all identifiers to their canonical long
form using the SymbolTable. This ensures the AST is canonical and semantic
hash is stable across format round-trips (compact ↔ relaxed).

Changes:
- Parser scans for SymbolMap first, builds SymbolTable before parsing declarations
- All identifiers (function names, parameters, type names, fields, etc.) are
  normalized to long form via SymbolTable.normalize_ident()
- SymbolTable exported from z1-fmt with new from_symbol_map() constructor
- Parser test updated to expect normalized 'handler' instead of 'h'

Test Results:
- round_trip_preserves_semantics test now PASSES
- Semantic hash is identical after: compact -> relaxed -> compact -> relaxed
- All 172 workspace tests passing
- Clippy clean, code formatted

This achieves the core design requirement: The canonical AST uses only
long identifiers (never short names). SymbolMap is formatting-only.

--- a/crates/z1-parse/Cargo.toml
+++ b/crates/z1-parse/Cargo.toml
@@ -11,4 +11,5 @@ anyhow.workspace = true
 serde.workspace = true
 thiserror.workspace = true
 z1-ast = { path = "../z1-ast" }
+z1-fmt = { path = "../z1-fmt" }
 z1-lex = { path = "../z1-lex" }
