--- a/crates/z1-cli/Cargo.toml
+++ b/crates/z1-cli/Cargo.toml
@@ -6,6 +6,14 @@ license.workspace = true
 rust-version.workspace = true
 publish = false
 
+[[bin]]
+name = "z1-cli"
+path = "src/main.rs"
+
+[lib]
+name = "z1_cli"
+path = "src/lib.rs"
+
 [dependencies]
 anyhow.workspace = true
 clap.workspace = true
