--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ resolver = "2"
 edition = "2021"
 version = "0.1.0"
 license = "Apache-2.0"
-rust-version = "1.80"
+rust-version = "1.81"
 
 [workspace.dependencies]
 anyhow = "1.0"
@@ -35,7 +35,7 @@ rowan = "0.15"
 camino = "1.1"
 sha3 = "0.10"
 hex = "0.4"
-ed25519-dalek = { version = "2.1", features = ["rand_core"] }
+ed25519-dalek = "2.1"
 rand = "0.9"
 chrono = { version = "0.4", features = ["serde"] }
 clap = { version = "4.5", features = ["derive"] }
