--- a/crates/z1-prov/Cargo.toml
+++ b/crates/z1-prov/Cargo.toml
@@ -13,7 +13,7 @@ serde_json.workspace = true
 sha3.workspace = true
 hex.workspace = true
 ed25519-dalek.workspace = true
-rand.workspace = true
+getrandom = "0.3"
 chrono.workspace = true
 thiserror.workspace = true
 
